Fix placing of book button on mobile

--- a/styles.css
+++ b/styles.css
@@ -825,7 +825,7 @@ footer img {
   .call-to-action .book-button {
     height: 2.7rem;
     width: 16rem;
-    margin-left: 5rem;
+    margin-left: 2.5rem;
     padding: 1rem;
     border: 2px solid #0B3A81;
     background-color: white;
